# nzzl-metamodule

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  plugin-mm.json  plugin.json
.github/workflows/: build.yml
docs/: DESIGN.md
src/: nzzl.cc  pattern.hh  plugin.cc  rng.hh
tests/: run_tests.sh  test_pattern.cc
